--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "react_starter",
+  "name": "to-do-list",
   "version": "1.0.0",
-  "description": "Starting setup for react redux project",
+  "description": "basic To do list building react",
   "main": "index.js",
   "scripts": {
     "start": "node dev_server.js",
     "bundle": "webpack --config webpack.prod.js --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Scott Bowler",
+  "author": "Patricia Burns",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Learning-Fuze/react_starter.git"
+    "url": "https://github.com/Patriciadburns1/todo-list.git"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
